rule-of-three: Don't warn if either copy-assign or copy-ctor is deleted

It's safe, as it won't happen that one of the user-methods will do
something different from the compiler-generated-method, as one of
them can't be called.

BUG: 388677